--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<app-nav></app-nav>
 <h1>{{title}}</h1>
-<p *ngFor="let user of users">{{user.userName}}</p>
+<p *ngFor="let user of users">{{user.userName}}, {{user.id}}, {{user.hashPassword}}</p>
