complete register user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
 <app-nav></app-nav>
-<h1>{{title}}</h1>
-<p *ngFor="let user of users">{{user.userName}}, {{user.id}}, {{user.hashPassword}}</p>
+<app-home></app-home>
